pagination implemented and fixed horizontal scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -48,4 +48,14 @@
     h1 {
         @apply text-xl;
     }
+
+    .no-spinner {
+        appearance: textfield;
+    }
+
+    .no-spinner::-webkit-outer-spin-button,
+    .no-spinner::-webkit-inner-spin-button {
+        appearance: none;
+        margin: 0;
+    }
 }
